# node-ipc-dependencies-list

./: LICENSE  README.md
github-dependent-scraper/: README.md  main.py  pyproject.toml  requirements.txt
scrapescriptfolder/: README.md  main.py
